<resources>
    <string name="app_name">ScoreApp</string>
    <string name="team_a">Team A</string>
    <string name="DefaultScores">00</string>
    <string name="team_b">Team B</string>
    <string name="ScorePoint1">+1</string>
    <string name="ScorePoint3">+3</string>
    <string name="ScorePoint7">+7</string>
    <string name="ScorePoint4">+4</string>
    <string name="reset">reset</string>
    <string name="weight">1</string>
</resources>
