<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/rootSectionPadding"
    tools:context="com.example.nagarjuna.scoreapp.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/topSection">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamNamesSection"
        android:orientation="vertical"
        android:layout_weight="@string/weight">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TeamNameSize"
            android:gravity="center"
            android:text="@string/team_a" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamAScore"
            android:textSize="@dimen/ScoreDimension"
            android:gravity="center"
            android:text="@string/DefaultScores"/>
    </LinearLayout>
    <View android:layout_height="@dimen/dividerHeight"
        android:layout_width="@dimen/dividerWidth"
        android:background="@color/colorPrimary">
    </View>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/teamScoreSection"
        android:layout_weight="@string/weight">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/TeamNameSize"
            android:text="@string/team_b"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teamBScore"
            android:textSize="@dimen/ScoreDimension"
            android:gravity="center"
            android:text="@string/DefaultScores"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/topSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scoreButtonSection"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="@string/weight"
            android:orientation="vertical"
            android:padding="@dimen/ButtonSecPadding"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAbtn1"
                android:layout_weight="@string/weight"
                android:text="@string/ScorePoint4"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAbtn2"
                android:layout_weight="@string/weight"
                android:text="@string/ScorePoint1"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAbtn3"
                android:layout_weight="@string/weight"
                android:text="@string/ScorePoint3"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/teamAbtn4"
                android:layout_weight="@string/weight"
                android:text="@string/ScorePoint7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="@string/weight"
            android:padding="@dimen/ButtonSecPadding"
            android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamBbtn1"
            android:layout_weight="@string/weight"
            android:text="@string/ScorePoint4"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamBbtn2"
            android:layout_weight="@string/weight"
            android:text="@string/ScorePoint1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamBbtn3"
            android:layout_weight="@string/weight"
            android:text="@string/ScorePoint3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teamBbtn4"
            android:layout_weight="@string/weight"
            android:text="@string/ScorePoint7"/>
            </LinearLayout>
        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset"
        android:layout_below="@+id/scoreButtonSection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/reseBtnMargin"
        android:id="@+id/reset" />
</RelativeLayout>


